# projeto-login

./: .flake8  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: github_ci.yml
config/: env-sample
docker-login/: docker-compose.yml
estilos/: media-query.css  style.css
mysite/: settings.py  urls.py
mysite/base/: forms.py  models.py  urls.py  views.py
mysite/base/migrations/: 0001_initial.py  0002_cadastro.py
mysite/base/static/css/: media-query.css  style.css
mysite/base/templates/base/: base.html  esqueci.html  index.html  login.html  origin.html  senha_enviada.html
